output.txt
run
+- run emmetwo
   +- zig build-exe emmetwo Debug native 1 errors
src/statemachine.zig:146:13: error: found compile log statement
            @compileLog(ch);
            ^~~~~~~~~~~~~~~

Compile Log Output:
@as(u8, 116)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 110)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 101)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 112)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 116)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 116)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 112)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 115)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 101)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 97)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 115)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 101)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 110)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 115)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 101)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 110)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 121)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 101)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 110)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 115)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 103)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 114)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 114)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 112)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 101)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 100)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 116)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 110)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 116)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 116)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 116)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 101)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 103)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 101)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 111)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 100)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 116)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 108)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 114)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 109)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 108)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 101)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 101)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 121)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 116)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 100)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 101)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 107)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 114)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 97)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 101)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 121)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 101)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 101)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 97)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 109)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 100)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 108)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 107)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 110)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 107)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 97)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 121)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 112)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 116)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 110)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 101)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 111)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 105)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 111)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 108)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 108)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 110)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 118)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 103)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 115)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 100)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 112)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 118)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 101)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 98)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 112)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 114)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 114)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 114)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 100)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 108)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 116)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 109)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 49)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 50)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 51)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 52)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 53)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 54)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 114)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 105)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 108)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 112)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 116)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 100)
@as(defs.tipe, .identifier)
@as(defs.tipe, .dl)
@as(u8, 104)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 114)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 108)
@as(defs.tipe, .identifier)
@as(defs.tipe, .identifier)
@as(u8, 40)
@as(defs.tipe, .@"(")
@as(defs.tipe, .invalid)
@as(u8, 41)
@as(defs.tipe, .@")")
@as(defs.tipe, .invalid)
@as(u8, 91)
@as(defs.tipe, .@"[")
@as(defs.tipe, .invalid)
@as(u8, 93)
@as(defs.tipe, .@"]")
@as(defs.tipe, .invalid)
@as(u8, 62)
@as(defs.tipe, .@">")
@as(defs.tipe, .invalid)
@as(u8, 43)
@as(defs.tipe, .@"+")
@as(defs.tipe, .invalid)
@as(u8, 35)
@as(defs.tipe, .@"#")
@as(defs.tipe, .invalid)
@as(u8, 46)
@as(defs.tipe, .@".")
@as(defs.tipe, .invalid)
@as(u8, 61)
@as(defs.tipe, .@"=")
@as(defs.tipe, .invalid)
@as(u8, 42)
@as(defs.tipe, .@"*")
@as(defs.tipe, .invalid)
@as(u8, 97)
@as(defs.tipe, .a)
@as(defs.tipe, .identifier)
@as(u8, 98)
@as(defs.tipe, .b)
@as(defs.tipe, .identifier)
@as(u8, 105)
@as(defs.tipe, .i)
@as(defs.tipe, .identifier)
@as(u8, 112)
@as(defs.tipe, .p)
@as(defs.tipe, .identifier)
@as(u8, 113)
@as(defs.tipe, .q)
@as(defs.tipe, .invalid)
@as(u8, 115)
@as(defs.tipe, .s)
@as(defs.tipe, .identifier)
@as(u8, 117)
@as(defs.tipe, .u)
@as(defs.tipe, .ul)
@as(u8, 118)
@as(defs.tipe, .v)
@as(defs.tipe, .identifier)
error: the following command failed with 1 compilation errors:
/opt/homebrew/Cellar/zig/0.14.0_2/bin/zig build-exe -ODebug -Mroot=/Users/robertmorelli/Documents/personal-repos/emmet2/src/main.zig --cache-dir /Users/robertmorelli/Documents/personal-repos/emmet2/.zig-cache --global-cache-dir /Users/robertmorelli/.cache/zig --name emmetwo --zig-lib-dir /opt/homebrew/Cellar/zig/0.14.0_2/lib/zig/ --listen=- 
Build Summary: 0/5 steps succeeded; 1 failed
run transitive failure
+- run emmetwo transitive failure
   +- zig build-exe emmetwo Debug native 1 errors
   +- install transitive failure
      +- install emmetwo transitive failure
         +- zig build-exe emmetwo Debug native (reused)
error: the following build command failed with exit code 1:
/Users/robertmorelli/Documents/personal-repos/emmet2/.zig-cache/o/de0684ae50aaa50a4e7039bef296fa40/build /opt/homebrew/Cellar/zig/0.14.0_2/bin/zig /opt/homebrew/Cellar/zig/0.14.0_2/lib/zig /Users/robertmorelli/Documents/personal-repos/emmet2 /Users/robertmorelli/Documents/personal-repos/emmet2/.zig-cache /Users/robertmorelli/.cache/zig --seed 0x1dc05204 -Z8603ca5a16419df1 run -- -l testing/full/011.emmet
